# Operations_Dashboard_Django

./: .gitignore  CHANGELOG  README.md  pyproject.toml
Operations_Dashboard_Django/: manage.py
Operations_Dashboard_Django/Operations_Dashboard_Django/: asgi.py  settings.py  urls.py  views.py  wsgi.py
Operations_Dashboard_Django/badgetoken/: apps.py  urls.py  views.py
Operations_Dashboard_Django/dashapp/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Operations_Dashboard_Django/dashboard/: admin.py  exceptions.py  models.py  responses.py  serializers.py  signals.py  urls.py  views.py
Operations_Dashboard_Django/dashboard_old/: views.py
Operations_Dashboard_Django/dashboard_tools/: apps.py  context_processors.py  signals.py
Operations_Dashboard_Django/dbfile/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Operations_Dashboard_Django/integration/: serializers.py  urls.py  views.py
Operations_Dashboard_Django/static/: style-dashboard.css
Operations_Dashboard_Django/templates/: 400.html  404.html  base_nav_full.html  base_nav_none.html  dashboard_index_orig.html  edit_sorry.html  unprivileged.html
Operations_Dashboard_Django/web/: urls.py  views.py
database/: SETUP  pg_dump_dashboard.sh  pg_restore_dashboard.sh
provision/: AWS.txt  README  build_run_dev.sh  docker-compose.yml
provision/combo/: Dockerfile  django  django.service  gunicorn.conf.py  nginx.conf  nginx.dashboard
provision/nginx/: nginx.conf
provision/web/: Dockerfile  Operations_Dashboard_Django.conf
(+33 files in other folders)
