[project]
name = "Operations_Dashboard_Django"
version = "0.22.0"
description = "ACCESS Operations Dashboard"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "django==5.2.*",
    "django-allauth>=65.*",
    "django-bootstrap5==25.*",
    "djangorestframework",
    "gunicorn",
    "Pillow",
    "psycopg2-binary",
    "requests",
    "requests-oauth2client",
    "access-django-user-admin==1.5.2",
]
